feat: Implement product management system with dynamic loading, filtering, and pagination
- Added ProductManager class for handling product operations in products.js
- Created products.html for the product catalog interface with search and filter options
- Developed setup-products.js to configure the database schema for products
- Integrated user role management and dynamic UI updates based on user roles
- Implemented modals for product details and forms for adding/editing products
- Added loading indicators and error/success notifications for user feedback

--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -108,6 +108,9 @@
                     <button class="action-btn" onclick="window.location.href='reports.html'">
                         📊 Reportes de Recursos
                     </button>
+                    <button class="action-btn" onclick="window.location.href='products.html'">
+                        📦 Catálogo de Productos
+                    </button>
                     <button class="action-btn" onclick="window.location.href='solicitar-asesoria.html'">
                         Solicitar Asesoría
                     </button>
