feat: Implement RF07 Invoicing System with full functionality and simplified version
- Added main invoicing HTML interface with Bootstrap styling and dynamic elements.
- Created setup script for the full invoicing system, executing SQL schema and verifying configurations.
- Developed a simplified invoicing setup script for easier deployment with fewer features.

--- a/frontend/public/dashboard.html
+++ b/frontend/public/dashboard.html
@@ -18,6 +18,7 @@
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="proyectos.html">Proyectos</a></li>
                     <li><a href="reportes.html">Reportes</a></li>
+                    <li><a href="invoices-rf07.html">Facturación</a></li>
                     <li><a href="#" id="logoutBtn">Cerrar Sesión</a></li>
                 </ul>
             </nav>
@@ -110,6 +111,9 @@
                     </button>
                     <button class="action-btn" onclick="window.location.href='products.html'">
                         📦 Catálogo de Productos
+                    </button>
+                    <button class="action-btn" onclick="window.location.href='invoices-rf07.html'">
+                        🧾 Sistema de Facturación
                     </button>
                     <button class="action-btn" onclick="window.location.href='solicitar-asesoria.html'">
                         Solicitar Asesoría
