feat: Enhance dashboard functionality with simplified JavaScript and improved UI elements; update HTML for better navigation and security policies

--- a/frontend/public/budgets.html
+++ b/frontend/public/budgets.html
@@ -430,7 +430,7 @@
         </div>
     </div>
 
-    <script src="assets/js/auth.js"></script>
+    <!-- Auth script removido para evitar redirecciones -->
     <script src="assets/js/budgets.js"></script>
 </body>
 </html>
