--- a/frontend/public/products.html
+++ b/frontend/public/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Productos - AgroTechNova</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-hashes' https://cdnjs.cloudflare.com; object-src 'none';">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/products.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -261,7 +262,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/auth.js"></script>
+    <!-- Auth script removido para evitar redirecciones -->
     <script src="assets/js/products.js"></script>
 </body>
 </html>
