--- a/frontend/public/reports.html
+++ b/frontend/public/reports.html
@@ -552,7 +552,7 @@
         </div>
     </main>
 
-    <script src="assets/js/auth.js"></script>
+    <!-- Auth script removido para evitar redirecciones -->
     <script src="assets/js/reports.js"></script>
 </body>
 </html>
