--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroTechNova - Sistema de Gestión Agroindustrial</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-hashes'; object-src 'none';">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
