--- a/frontend/public/monitoring.html
+++ b/frontend/public/monitoring.html
@@ -691,7 +691,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/monitoring.js"></script>
+    <!-- Scripts removidos para evitar redirecciones automáticas -->
 </body>
 </html>
