--- a/frontend/public/phases.html
+++ b/frontend/public/phases.html
@@ -352,7 +352,6 @@
         </div>
     </div>
 
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/phases.js"></script>
+    <!-- Scripts removidos para evitar redirecciones automáticas -->
 </body>
 </html>
