--- a/frontend/public/tasks.html
+++ b/frontend/public/tasks.html
@@ -548,7 +548,6 @@
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/tasks.js"></script>
+    <!-- Scripts removidos para evitar redirecciones automáticas -->
 </body>
 </html>
